@@ -1,5 +1,8 @@
 2011-05-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* templates/iframe-rrd.html: new RRD leaf view: "iframe-rrd" for
+	portal integration
+
 	* perllib/Torrus/DevDiscover/CCOM.pm: new discovery module for
 	C-COM CAPSPAN devices
 	
